add empathy line in response and format the response

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-GEMINI_API_KEY=AIzaSyCkVYnuuMxOqrnjKQieNYWV8h41cfmz1og
+GEMINI_API_KEY=AIzaSyBunGduml6EBifrZQiUsrNqcwpBXNJum_w
+MONGO_URI=mongodb://localhost:27017
